--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -295,7 +295,7 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 ## 3.1 Leaf anatomy and morphology
 
 Sun leaves have anatomical, morphological, and physiological traits that reduce heat due to higher conductance ($g_b$ or maximal $g_s$) and/or reflectance, which help to lower $T_{leaf}$-$T_{air}$ (Table `r table_leaf_traits`). 
-Thus, sun leaves are generally smaller and thicker, with higher leaf mass per area, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968a; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017; @mathurPhotosyntheticEfficiencySun2018a], but with greater leaf packing and clumping (which reduces $g_b$).
+Thus, sun leaves are generally smaller and thicker, with higher leaf mass per area, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968a; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017], but with greater leaf packing and clumping (which reduces $g_b$).
 Steeper leaf angles reduce mid-day radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, thereby also decreasing radiation load.
 Further, sun leaves tend to have higher stomatal and vein densities, which enable higher maximal $g_s$ and thereby facilitate effective cooling [see section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
 At the same time, sun leaves also have adaptations to protect against water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [reduces $g_b$ or increases boundary layer turbulence, @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016a].
@@ -317,7 +317,7 @@ Higher photosynthetic rates (per unit leaf area) and more frequent stomatal clos
 ## 3.#. Biochemical protection against foliage light and heat damage
 
 Biochemical protection against foliage light and heat damage increase with peak radiation loads, and thus tend to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
-By reducing photosynthesis, heat and associated stomatal closure from VPD can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition.
+Further, by reducing photosynthesis, heat and associated stomatal closure from VPD can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition.
 Accumulation of excess light energy results in overreduction of the electron transport chain and the formation of harmful reactive oxygen species [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a].
 A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by accumulated light energy [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015].
 This form of NPQ is accomplished by the interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry.
