--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3578,6 +3578,27 @@
   file = {/Users/nidhivinod/Zotero/storage/8EV9NV3N/23-9-577.pdf}
 }
 
+@article{floresFloodplainsAchillesHeel2017,
+  title = {Floodplains as an {{Achilles}}’ Heel of {{Amazonian}} Forest Resilience},
+  author = {Flores, Bernardo M. and Holmgren, Milena and Xu, Chi and van Nes, Egbert H. and Jakovac, Catarina C. and Mesquita, Rita C. G. and Scheffer, Marten},
+  date = {2017-04-25},
+  journaltitle = {PNAS},
+  volume = {114},
+  number = {17},
+  eprint = {28396440},
+  eprinttype = {pmid},
+  pages = {4442--4446},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1617988114},
+  url = {https://www.pnas.org/content/114/17/4442},
+  urldate = {2022-02-11},
+  abstract = {The massive forests of central Amazonia are often considered relatively resilient against climatic variation, but this view is challenged by the wildfires invoked by recent droughts. The impact of such fires that spread from pervasive sources of ignition may reveal where forests are less likely to persist in a drier future. Here we combine field observations with remotely sensed information for the whole Amazon to show that the annually inundated lowland forests that run through the heart of the system may be trapped relatively easily into a fire-dominated savanna state. This lower forest resilience on floodplains is suggested by patterns of tree cover distribution across the basin, and supported by our field and remote sensing studies showing that floodplain fires have a stronger and longer-lasting impact on forest structure as well as soil fertility. Although floodplains cover only 14\% of the Amazon basin, their fires can have substantial cascading effects because forests and peatlands may release large amounts of carbon, and wildfires can spread to adjacent uplands. Floodplains are thus an Achilles’ heel of the Amazon system when it comes to the risk of large-scale climate-driven transitions.},
+  langid = {english},
+  keywords = {climate change,drought,fire,tropical forest,tropical savanna},
+  file = {/Users/nidhivinod/Zotero/storage/5V645I7W/Flores et al. - 2017 - Floodplains as an Achilles’ heel of Amazonian fore.pdf}
+}
+
 @book{fokenMicrometeorology2017,
   title = {Micrometeorology},
   author = {Foken, Thomas},
