--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -550,7 +550,7 @@ Thus, canopies are becoming increasingly prone to disturbance and gap formation,
 Such changes often result in increased growth of smaller trees, which benefit from increased light [@hoganDroughtInterannualVariability2019;@bennettLargerTreesSuffer2015], and wetter forests can prove quite resilient to canopy disturbance [@millerReducedImpactLogging2011].
 However, this shift to hotter and drier microclimates makes some forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
 Severe degradation impacts can cause dramatic ecological state changes (e.g., the transition from forest to more open, savanna-like vegetation in tropical forest regions through 'savannization') and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
-Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but may have reduced probability of recovering and persisting when affected by severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @mcdowellPervasiveShiftsForest2020].
+Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but may have reduced probability of recovering and persisting when affected by severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @mcdowellPervasiveShiftsForest2020; @floresFloodplainsAchillesHeel2017].
 
 Canopy disturbance poses an increasing threat to the biodiversity of understory species that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013a; @greiserHidingClimateCharacterizing2019]. 
 Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020].
