--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -328,14 +328,13 @@ In order to maximize carbon uptake and minimize damage during sunflecks, shade-a
 
 <!--VOCs-->
 Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017]. 
-Emission of the VOCs isoprene and a diversity of monoterpenes are similarly light and temperature sensitive, and play similar roles in photosynthetic thermal tolerance [@taylorCapacityEmitIsoprene2019; @sharkeyIsopreneEmissionPlants2008; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005]. 
 In contrast to VOCs stored in oils that are released passively by heat and wounding, such as the monoterpenes responsible for pine scent, light-dependent emissions are linked to photosynthetic substrate supply and are dynamically tuned to environmental and metabolic conditions as a component of metabolic regulatory processes [@monsonLeafIsopreneEmission2021; @laothawornkitkulBiogenicVolatileOrganic2009; @lantzIsopreneNewInsights2019; @riedlmeierMonoterpenesSupportSystemic2017]. 
 Due to its much higher emission rates and relative ease of detectability, isoprene has received far more study in the field, though both isoprene and monoterpenes are expressed by a wide diversity of angiosperms and gymnosperms across all biomes of the globe [see @taylorNewFieldInstrument2021 and references therein].
 
-Less than half of tree species express significant light-dependent emissions [@kesselmeierBiogenicVolatileOrganic; @taylorIsopreneEmissionStructures2018], such that variation in emissions across the vertical profile can be influenced both by vertical variation in species compositions and plasticity in emission rate capacities [@taylorNewFieldInstrument2021].
+Less than half of tree species express significant light-dependent isoprene emissions [@kesselmeierBiogenicVolatileOrganic; @taylorIsopreneEmissionStructures2018], such that variation in emissions across the vertical profile is influenced both by vertical variation in species compositions and plasticity in emission rate capacities [@taylorNewFieldInstrument2021].
 Within species, isoprene emission rates tend to increase toward brighter and hotter microenvironments [@niinemetsPhotosynthesisResourceDistribution2007], and across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests [@taylorIsopreneEmissionStructures2018]. 
-However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy region of an Amazonian forest [Table `r table_leaf_metabolism`, @taylorNewFieldInstrument2021]. 
-Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface [Table `r table_leaf_metabolism`, @simpragaVerticalCanopyGradient2013]. 
+However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy region of an Amazonian forest [Table `r table_leaf_traits`, @taylorNewFieldInstrument2021]. 
+Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface [Table `r table_leaf_traits`, @simpragaVerticalCanopyGradient2013]. 
 This pattern may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average. 
 Temperature sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. 
 Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] with height and influence leaf function will be important for resolving the role of VOCs in forest thermal sensitivity across the vertical gradient. 
