--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -316,7 +316,7 @@ Higher photosynthetic rates (per unit leaf area) and more frequent stomatal clos
 
 ## 3.#. Biochemical protection against foliage light and heat damage
 
-Biochemical protection against foliage light and heat damage increase with peak radiation loads, and thus tend to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
+Biochemical protection against foliage light and heat damage increases with peak radiation loads, and thus tends to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
 Further, by reducing photosynthesis, heat and associated stomatal closure from VPD can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition.
 Accumulation of excess light energy results in overreduction of the electron transport chain and the formation of harmful reactive oxygen species [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a].
 A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by accumulated light energy [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015].
@@ -364,9 +364,13 @@ However, not enough studies have evaluated thermal tolerances across vertical gr
 The vertical structure of microenvironments likely influences forest photosynthetic capacity [@rey-sanchez_spatial_2016] via leaf phenology. 
 In deciduous forests, the timing and extent of seasonal leaf gain and loss is structured across the vertical profile. 
 In temperate deciduous forests, seasonal warming occurs earlier in the sheltered understory, facilitating earlier spring bud-break compared to the cooler upper canopy [@augspurgerDifferencesLeafPhenology2003]. 
-Early leaf-out allows some tree saplings to do the majority of their annual carbon fixation before canopy foliage and reduces light availability [@leeSpringPhenologicalEscape2021]. 
-Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals has been found to increase toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. Similarly, on the interspecific level, across increasing tree size classes, there is an increase in the fractions of species that are deciduous [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018]. Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019]. Leaf turnover is faster in the upper canopy than the understory [@osadaLeafDynamicsMaintenance2001], and as a result upper canopy leaves are, on average, younger than shade leaves.
-Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; @mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015]. Leaf phenology thereby both responds to and influences the vertical structure of forest microenvironments and function.
+Early leaf-out allows some tree seedlings to do the majority of their annual carbon fixation before canopy foliage and reduces light availability [@leeSpringPhenologicalEscape2021]. 
+Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals has been found to increase toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c].
+Similarly, on the interspecific level, across increasing tree size classes, there is an increase in the fractions of species that are deciduous [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
+Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019].
+Leaf turnover is faster in the upper canopy than the understory [@osadaLeafDynamicsMaintenance2001], and as a result upper canopy leaves are, on average, younger than shade leaves.
+Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; @mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015].
+Leaf phenology thereby both responds to and influences the vertical structure of forest microenvironments and function.
 
 
 ## 4. Leaf gas exchange and its thermal sensitivity
@@ -407,8 +411,8 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 Leaf hydraulic, stomatal and boundary layer conductances are all critical for latent heat loss, which in turn can be important for regulating $T_{leaf}$ (Fig. `r fig_leaf_T`). 
 Due to higher wind, lower RH, and smaller leaf sizes in the upper canopy (Fig. `r fig_NEON_vertical`, Table `r table_leaf_traits`), $g_b$ increases with height (Table `r table_leaf_metabolism`).
 Maximum $g_s$ increases with light--typically tracking photosynthetic capacity [@wongStomatalConductanceCorrelates1979]--and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
-However, water supply cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves with fully open stomata, because of height-related constraints on water transport [e.g, @yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010] and/or because of increased evaporative demand ($VPD_{leaf}$) caused by leaf warming in sunlit canopy locations [@buckleyStomatalOptimisationRelation2014]. These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
-Stomatal depression reduces transpirational cooling, thus amplifying the warming of sun leaves by high radiation loads [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
+However, water supply cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves with fully open stomata, because of height-related constraints on water transport [e.g, @yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010] and/or because of increased evaporative demand ($VPD_{leaf}$) caused by leaf warming in sunlit canopy locations [@buckleyStomatalOptimisationRelation2014]. These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.2 (Table 1).
+Stomatal depression reduces transpirational cooling (Fig. `r fig_leaf_T`), thus amplifying the warming of sun leaves by high radiation loads [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
 The temperature at which $g_s$ is greatest, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ (driven by increased VPD) than do shade leaves in lower vertical positions [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. 
 This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of upper canopy leaves more than understory leaves, particularly when water availability is limited.
 
@@ -457,8 +461,8 @@ This points to a dominant role of vertical profiles in the biophysical environme
 
 Vertical gradients also affect the climate sensitivity of metabolism and growth.
 Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) even before soil water becomes limited in forests not experiencing drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016].
-Therefore, periods of high atmospheric demand -- be these on time scales of hours, days, or seasons -- tend to cause greater reductions in tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. 
-This is consistent with the observation that $g_s$ limitation with $T_{air}$ increases with height across the vertical profile (Table `r table_leaf_metabolism`). 
+Therefore, periods of high atmospheric demand -- be these on time scales of hours, days, or seasons -- tend to cause greater reductions in tree transpiration and photosynthesis in tall trees that occupy canopy positions in closed-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. 
+This is consistent with the observation that $g_s$ limitation increases with height across the vertical profile (section 4.1, Table `r table_leaf_metabolism`). 
 More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004] -- often combined with greater effective rooting depth -- may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and reduce adjustment of traits related to carbon metabolism during drought [@bartholomewSmallTropicalForest2020]. 
 This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
 
@@ -467,13 +471,13 @@ In the field of dendrochronology, it is generally accepted that tree ring record
 However, only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
 These have most commonly found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [Fig. `r fig_treerings`, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021;@anderson-teixeiraJointEffectsClimate2022; @heilmanEcologicalForecastingTree2022], corroborating evidence from globally distributed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. 
 In addition to lower drought resistance of growth, larger trees frequently exhibit greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
-Mechanistically, this is almost certainly driven in part by the fact that larger trees have their crowns in a microenvironment that is more challenging during drought [Figs. `r fig_schematic` - `r fig_leaf_T`, @scharnweberConfessionsSolitaryOaks2019], yet there is also reason to believe that height itself provides disadvantages [@olsonPlantHeightHydraulic2018; @couvreurWaterTransportTall2018].  
+Mechanistically, this is almost certainly driven in part by the fact that larger trees have their crowns in a microenvironment that is more challenging during drought [Figs. `r fig_schematic` - `r fig_leaf_T`, @scharnweberConfessionsSolitaryOaks2019], yet there is also reason to believe that height itself provides disadvantages [@olsonPlantHeightHydraulic2018; @couvreurWaterTransportTall2018].
 Indeed, despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], greater drought sensitivity of larger trees has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraJointEffectsClimate2022], although there is also evidence that short trees in young stands are more drought-sensitive than taller trees in mature forests [@irvineAgerelatedChangesEcosystem2004].
 The relative importance of exposure versus height in shaping drought sensitivity remains to be disentangled.
 
 Although it is clear that drought sensitivity increases with crown height though forest vertical gradients, and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies across this gradient.
 Because VPD increases rapidly with $T_{air}$, high $T_{air}$ is often associated with atmospheric drought, likely explaining negative growth responses -- particularly among larger trees -- even if soil moisture remains high [@novickIncreasingImportanceAtmospheric2016], or when precipitation is statistically accounted for [Fig. `r fig_treerings`, @anderson-teixeiraJointEffectsClimate2022].
-However, under conditions that are humid enough that canopy trees can maintain high $g_s$, we do not necessarily expect their photosynthesis (see section 4.2) or woody growth to exhibit higher sensitivity to $T_{air}$ than their understory counterparts. 
+However, under well-watered conditions conducive to high $g_s$ in canopy trees, we do not necessarily expect their photosynthesis (see section 4.2) or woody growth to exhibit higher sensitivity to $T_{air}$ than their understory counterparts. 
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
 Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
 
