--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3809,6 +3809,26 @@
   keywords = {10.21973/N3C08R,debris flows,geomorphology,landslides,ReserveID = 32 Sedgwick Reserve,sediment supply,Sediment transport,slope stability}
 }
 
+@article{garaImpactVerticalCanopy2018,
+  title = {Impact of {{Vertical Canopy Position}} on {{Leaf Spectral Properties}} and {{Traits}} across {{Multiple Species}}},
+  author = {Gara, Tawanda W. and Darvishzadeh, Roshanak and Skidmore, Andrew K. and Wang, Tiejun},
+  date = {2018-02},
+  journaltitle = {Remote Sensing},
+  volume = {10},
+  number = {2},
+  pages = {346},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  issn = {2072-4292},
+  doi = {10.3390/rs10020346},
+  url = {https://www.mdpi.com/2072-4292/10/2/346},
+  urldate = {2022-02-12},
+  abstract = {Understanding the vertical pattern of leaf traits across plant canopies provide critical information on plant physiology, ecosystem functioning and structure and vegetation response to climate change. However, the impact of vertical canopy position on leaf spectral properties and subsequently leaf traits across the entire spectrum for multiple species is poorly understood. In this study, we examined the ability of leaf optical properties to track variability in leaf traits across the vertical canopy profile using Partial Least Square Discriminatory Analysis (PLS-DA). Leaf spectral measurements together with leaf traits (nitrogen, carbon, chlorophyll, equivalent water thickness and specific leaf area) were studied at three vertical canopy positions along the plant stem: lower, middle and upper. We observed that foliar nitrogen (N), chlorophyll (Cab), carbon (C), and equivalent water thickness (EWT) were higher in the upper canopy leaves compared with lower shaded leaves, while specific leaf area (SLA) increased from upper to lower canopy leaves. We found that leaf spectral reflectance significantly (P ≤ 0.05) shifted to longer wavelengths in the ‘red edge’ spectrum (685–701 nm) in the order of lower {$>$} middle {$>$} upper for the pooled dataset. We report that spectral bands that are influential in the discrimination of leaf samples into the three groups of canopy position, based on the PLS-DA variable importance projection (VIP) score, match with wavelength regions of foliar traits observed to vary across the canopy vertical profile. This observation demonstrated that both leaf traits and leaf reflectance co-vary across the vertical canopy profile in multiple species. We conclude that canopy vertical position has a significant impact on leaf spectral properties of an individual plant’s traits, and this finding holds for multiple species. These findings have important implications on field sampling protocols, upscaling leaf traits to canopy level, canopy reflectance modelling, and subsequent leaf trait retrieval, especially for studies that aimed to integrate hyperspectral measurements and LiDAR data.},
+  issue = {2},
+  langid = {english},
+  keywords = {canopy position,hyperspectral,leaf traits,red-edge,spectral discrimination},
+  file = {/Users/nidhivinod/Zotero/storage/NXUUGHK2/Gara et al. - 2018 - Impact of Vertical Canopy Position on Leaf Spectra.pdf}
+}
+
 @article{garcia-plazaolaAcclimationAntioxidantPools2004,
   title = {Acclimation of Antioxidant Pools to the Light Environment in a Natural Forest Canopy},
   author = {García-Plazaola, José Ignacio and Becerril, José María and Hernández, Antonio and Niinemets, Ülo and Kollist, Hannes},
@@ -4584,6 +4604,26 @@
   langid = {english},
   keywords = {<i>Betula pendula</i>,<i>Carpinus betulus</i>,<i>Fagus sylvatica</i>,<i>Quercus petraea</i>,<i>Tilia cordata</i>,adult trees,forest succession,leaf area density,leaf inclination,leaf mass area},
   file = {/Users/nidhivinod/Zotero/storage/QLVXK339/Hagemeier and Leuschner - 2019 - Functional Crown Architecture of Five Temperate Br.pdf;/Users/nidhivinod/Zotero/storage/3YBGW6D5/265.html}
+}
+
+@article{hagemeierLeafCrownOptical2019,
+  title = {Leaf and {{Crown Optical Properties}} of {{Five Early-}}, {{Mid-}} and {{Late-Successional Temperate Tree Species}} and {{Their Relation}} to {{Sapling Light Demand}}},
+  author = {Hagemeier, Marc and Leuschner, Christoph},
+  date = {2019-10},
+  journaltitle = {Forests},
+  volume = {10},
+  number = {10},
+  pages = {925},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  issn = {1999-4907},
+  doi = {10.3390/f10100925},
+  url = {https://www.mdpi.com/1999-4907/10/10/925},
+  urldate = {2022-02-12},
+  abstract = {The optical properties of leaves and canopies determine the availability of radiation for photosynthesis and the penetration of light through tree canopies. How leaf absorptance, reflectance and transmittance and radiation transmission through tree canopies change with forest succession is not well understood. We measured the leaf optical properties in the photosynthetically active radiation (PAR) range of five Central European early-, mid- and late-successional temperate broadleaf tree species and studied the minimum light demand of the lowermost shade leaves and of the species’ offspring. Leaf absorptance in the 350–720 nm range varied between c. 70\% and 77\% in the crown of all five species with only a minor variation from the sun to the shade crown and between species. However, specific absorptance (absorptance normalized by mass per leaf area) increased about threefold from sun to shade leaves with decreasing leaf mass area (LMA) in the late-successional species (Carpinus betulus L., Tilia cordata Mill., Fagus sylvatica L.), while it was generally lower in the early- to mid-successional species (Betula pendula Roth, Quercus petraea (Matt.)Liebl.), where it changed only a little from sun to shade crown. Due to a significant increase in leaf area index, canopy PAR transmittance to the forest floor decreased from early- to late-successional species from \textasciitilde 15\% to 1\%–3\% of incident PAR, linked to a decrease in the minimum light demand of the lowermost shade leaves (from \textasciitilde 20 to 1\%–2\%) and of the species’ saplings (from \textasciitilde 20 to 3\%–4\%). The median light intensity on the forest floor under a closed canopy was in all species lower than the saplings’ minimum light demand. We conclude that the optical properties of the sun leaves are very similar among early-, mid- and late-successional tree species, while the shade leaves of these groups differ not only morphologically, but also in terms of the resource investment needed to achieve high PAR absorptance.},
+  issue = {10},
+  langid = {english},
+  keywords = {<i>Betula</i>,<i>Fagus</i>,<i>Quercus</i>,absorptance,minimum light demand,PAR,shade leaves,sun leaves,transmittance},
+  file = {/Users/nidhivinod/Zotero/storage/VDJEQINM/Hagemeier and Leuschner - 2019 - Leaf and Crown Optical Properties of Five Early-, .pdf}
 }
 
 @article{hamadaAssessingMonitoringSemiarid2013,
@@ -6066,6 +6106,43 @@
   file = {/Users/nidhivinod/Zotero/storage/CYEBZ3BY/Klein and Ramon - 2019 - Stomatal sensitivity to CO2 diverges between angio.pdf;/Users/nidhivinod/Zotero/storage/TBKM89MG/1365-2435.html}
 }
 
+@article{knappVariabilityLeafOptical1998,
+  title = {Variability in Leaf Optical Properties among 26 {{Species From A Broad Range Of Habitats}}},
+  author = {Knapp, Alan K. and Carter, Gregory A.},
+  date = {1998},
+  journaltitle = {American Journal of Botany},
+  volume = {85},
+  number = {7},
+  pages = {940--946},
+  issn = {1537-2197},
+  doi = {10.2307/2446360},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.2307/2446360},
+  urldate = {2022-02-12},
+  abstract = {Leaves from 26 species with growth forms from annual herbs to trees were collected from open, intermediate, and shaded understory habitats in Mississippi and Kansas, USA. Leaf optical properties including reflectance, transmittance, and absorptance in visible and near infrared (NIR) wavelengths were measured along with leaf thickness and specific leaf mass (SLM). These leaf properties and internal light scattering have been reported to vary with light availability in studies that have focused on a limited number of species. Our objective was to determine whether these patterns in leaf optics and light availability were consistent when a greater number of species were evaluated. Leaf thickness and SLM varied by tenfold among species sampled, but within-habitat variance was high. Although there was a strong trend toward thicker leaves in open habitats, only SLM was significantly greater in open vs. understory habitats. In contrast, leaf optical properties were strikingly similar among habitats. Reflectance and reflectance/transmittance in the NIR were used to estimate internal light scattering and there were strong relationships (r2 {$>$} 0.65) between these optical properties and leaf thickness. We concluded that leaf thickness, which did not vary consistently among habitats, was the best predictor of NIR reflectance and internal light scattering. However, because carbon allocation to leaves was lower in understory species (low SLM) yet gross optical properties were similar among all habitats, the energy investment by shade leaves required to achieve optical equivalence with sun leaves was lower. Differences in leaf longevity and growth form within a habitat may help explain the lack of consistent patterns in leaf optics as the number of species sampled increases.},
+  langid = {english},
+  keywords = {absorptance,leaf optics,leaf thickness,light,reflectance,transmittance},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.2307/2446360},
+  file = {/Users/nidhivinod/Zotero/storage/XMWSNIGS/Knapp and Carter - 1998 - Variability in leaf optical properties among 26 Sp.pdf}
+}
+
+@article{knohlEffectsDiffuseRadiation2008,
+  title = {Effects of Diffuse Radiation on Canopy Gas Exchange Processes in a Forest Ecosystem},
+  author = {Knohl, Alexander and Baldocchi, Dennis D.},
+  date = {2008},
+  journaltitle = {Journal of Geophysical Research: Biogeosciences},
+  volume = {113},
+  number = {G2},
+  issn = {2156-2202},
+  doi = {10.1029/2007JG000663},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/2007JG000663},
+  urldate = {2022-02-12},
+  abstract = {Forest ecosystems across the globe show an increase in ecosystem carbon uptake efficiency under conditions with high fraction of diffuse radiation. Here, we combine eddy covariance flux measurements at a deciduous temperate forest in central Germany with canopy-scale modeling using the biophysical multilayer model CANVEG to investigate the impact of diffuse radiation on various canopy gas exchange processes and to elucidate the underlying mechanisms. Increasing diffuse radiation enhances canopy photosynthesis by redistributing the solar radiation load from light saturated sunlit leaves to nonsaturated shade leaves. Interactions with atmospheric vapor pressure deficit and reduced leaf respiration are only of minor importance to canopy photosynthesis. The response strength of carbon uptake to diffuse radiation depends on canopy characteristics such as leaf area index and leaf optical properties. Our model computations shows that both canopy photosynthesis and transpiration increase initially with diffuse fraction, but decrease after an optimum at a diffuse fraction of 0.45 due to reduction in global radiation. The initial increase in canopy photosynthesis exceeds the increase in transpiration, leading to a rise in water-use-efficiency. Our model predicts an increase in carbon isotope discrimination with water-use-efficiency resulting from differences in the leaf-to-air vapor pressure gradient and atmospheric vapor pressure deficit. This finding is in contrast to those predicted with simple big-leaf models that do not explicitly calculate leaf energy balance. At an annual scale, we estimate a decrease in annual carbon uptake for a potential increase in diffuse fraction, since diffuse fraction was beyond the optimum for 61\% of the data.},
+  langid = {english},
+  keywords = {carbon dioxide,eddy covariance,isotope discrimination,multilayer model,water use efficiency},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/2007JG000663},
+  file = {/Users/nidhivinod/Zotero/storage/PVJ4VRA9/Knohl and Baldocchi - 2008 - Effects of diffuse radiation on canopy gas exchang.pdf}
+}
+
 @article{kochDiurnalPatternsLeaf1994,
   title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
   shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
@@ -6686,6 +6763,24 @@
   keywords = {Dipterocarpaceae,dynamic photosynthesis,photorespiration,Shorea leprosula,understorey},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-3040.2003.01086.x},
   file = {/Users/nidhivinod/Zotero/storage/WD5IZV96/Leakey et al. - 2003 - High-temperature inhibition of photosynthesis is g.pdf}
+}
+
+@article{leeCorrelatesLeafOptical1990,
+  title = {Correlates of {{Leaf Optical Properties}} in {{Tropical Forest Sun}} and {{Extreme-Shade Plants}}},
+  author = {Lee, David W. and Bone, Richard A. and Tarsis, Sara L. and Storch, David},
+  date = {1990},
+  journaltitle = {American Journal of Botany},
+  volume = {77},
+  number = {3},
+  pages = {370--380},
+  issn = {1537-2197},
+  doi = {10.1002/j.1537-2197.1990.tb13566.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/j.1537-2197.1990.tb13566.x},
+  urldate = {2022-02-12},
+  abstract = {Thirteen shade-adapted rain forest species were compared with twelve sun-adapted tropical forest species for correlates to leaf optical properties (described previously in Amer. J. Bot. 73: 1100–1108). The two samples were similar in absorptance of quanta for photosynthesis, but the shade-adapted taxa: 1) had significantly lower specific leaf weights, indicating a more metabolically efficient production of surface for quantum capture; 2) synthesized less chlorophyll per unit area; and 3) used less chlorophyll for capturing the same quanta for photosynthesis. The anatomical features that best correlate with this increased efficiency are palisade cell shape and chloroplast distribution. Palisade cells with more equal dimensions have more chloroplasts on their abaxial surfaces. This dense layer of chloroplasts maximizes the light capture efficiency limited by sieve effects. The more columnar palisade cells of sun-adapted taxa allow light to pass through the central vacuoles and spaces between cells, making chloroplasts less efficient in energy capture, but allowing light to reach chloroplasts in the spongy mesophyll. Pioneer species may be an exception to these two groups of species. Three pioneer taxa included in this study have columnar palisade cells that are extremely narrow and packed closely together. This layer allows little penetration of light, but exposure of the leaf undersurface may provide illumination of spongy mesophyll chloroplasts in these plants.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/j.1537-2197.1990.tb13566.x},
+  file = {/Users/nidhivinod/Zotero/storage/RYKGUBRK/Lee et al. - 1990 - Correlates of Leaf Optical Properties in Tropical .pdf}
 }
 
 @article{leeSpectralDistributionRadiation1987,
